--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-        <title>My Web</title>
+        <title>YusufakbarWeb Profil</title>
       </head>
       <body class="mt-5">
     <nav class="purple lighten-1 fixed-top">
