mengubah file index dan css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <title>YusufakbarWeb Profil</title>
       </head>
-      <body class="mt-5">
+      <body id="home" class="mt-5 scrollspy">
     <nav class="purple lighten-1 fixed-top">
     <div class="nav-wrapper">
       <div class="container">
@@ -47,7 +47,6 @@
       <li><a href="#about">Bio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
-
    <div class="slider">
     <ul class="slides">
       <li>
@@ -147,37 +146,17 @@
               <p class="card-text">Jika ada yang ditanyakan silahkan hubungi saja saya</p>
             </div>
           </div>
-          <ul class="list-group text-left">
-            <li class="list-group-item active"><h3>Location</h3></li>
-            <li class="list-group-item active">My Home</li>
-            <li class="list-group-item active">Jl.Soko,Kalijirak,Tasikmadu</li>
-            <li class="list-group-item active">Karanganyar,Central Java, Indonesia</li>
-          </ul>
+         
           </div>
 
           <div class="col-lg-6">
           <form>
-          <div class="form-group">
-            <label for="nama">Nama</label>
-            <input type="text" class="form-control" id="nama">
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" id="email">
-          </div>
-          <div class="form-group">
-            <label for="telp">No Telp</label>
-            <input type="text" class="form-control" id="telp">
-          </div>
-          <div class="form-group">
-            <label for="pesan">Pesan</label>
-            <textarea name="pesan" id="pesan" class="form-control"></textarea>
-          </div>
-          <div class="form-goup">
-          <button type="button" class="btn btn-primary">
-            Kirim Pesan
-          </button>
-        </div>
+          <i class="material-icons small center">phone</i>
+          <p>085742719858</p>
+          <i class="material-icons small">email</i>
+          <p>yusufakbarp12@gmail.com</p>
+          <i class="material-icons small">location_on</i>
+          <p>Soko Rt2/5,Kalijirak,Tasikmadu,Karanganyar,JAwa Tengah,Indonesia</p>
           </form>
 
           </div>
